@@ -33,7 +33,7 @@ dependencies = [
     "packaging>=23.2",
     "pathvalidate>=2.4,<3.0",
     "psutil>=5.9,<6.0",
-    "pydantic>=1.9,<2.0",
+    "pydantic>=2.0,<3.0",
     "pyside6>=6.4.2",
     "python-box[all]>=6.0,<7.0",
     "requests>=2.28,<3.0",
