@@ -4,6 +4,7 @@
 
 * Adding #354 M1 support (thanks to Nhunz and Anton)
 * Adding #536 Improve Profiles - save advanced options (thanks to CelticTaonga and DCNerds)
+* Adding #589 support for pydantic 2.x (thanks to dmo marillat)
 * Fixing #185 audio channels not being set properly and resetting on encoder change (thanks to Tupsi)
 * Fixing #522 add file fails - fixed as of 5.7.0 (thanks to pcl5x2008)
 * Fixing #531 list limitation in readme that FFmpeg must support the software encoders listed (thanks to brunoais)
